<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.Login"
    tools:layout_editor_absoluteY="81dp">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:text="@string/pass"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/edtLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtLogin"
            app:layout_constraintTop_toBottomOf="@+id/edtLogin" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginTop="1dp"
            android:text="@string/user"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edtLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="168dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/edtLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtLogin"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btnConfirma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="232dp"
            android:text="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSenha"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_cadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="7dp"
            android:text="@string/txt_cadastrar"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirma"
            app:layout_constraintVertical_bias="0.592" />

        <TextView
            android:id="@+id/teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="528dp" />


</android.support.constraint.ConstraintLayout>